<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="395dp"
        android:layout_height="62dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/deal_no_deal_logo" />

    <ImageView
        android:id="@+id/case9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/UnopenedBox_9"
        app:layout_constraintBottom_toBottomOf="@+id/case10"
        app:layout_constraintEnd_toStartOf="@+id/case10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/case7"
        app:layout_constraintTop_toTopOf="@+id/case10"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/suitcase_position_9" />

    <ImageView
        android:id="@+id/case8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/UnopenedBox_8"
        app:layout_constraintEnd_toStartOf="@+id/reward7"
        app:layout_constraintTop_toBottomOf="@+id/case6"
        app:srcCompat="@drawable/suitcase_position_8" />

    <ImageView
        android:id="@+id/case7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/UnopenedBox_7"
        app:layout_constraintBottom_toBottomOf="@+id/case8"
        app:layout_constraintEnd_toStartOf="@+id/case8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/case5"
        app:layout_constraintTop_toTopOf="@+id/case8"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/suitcase_position_7" />

    <ImageView
        android:id="@+id/case10"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/UnopenedBox_10"
        app:layout_constraintEnd_toStartOf="@+id/reward9"
        app:layout_constraintTop_toBottomOf="@+id/case8"
        app:srcCompat="@drawable/suitcase_position_10" />

    <ImageView
        android:id="@+id/case6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/UnopenedBox_6"
        app:layout_constraintEnd_toStartOf="@+id/reward6"
        app:layout_constraintTop_toBottomOf="@+id/case4"
        app:srcCompat="@drawable/suitcase_position_6" />

    <ImageView
        android:id="@+id/case1"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/UnopenedBox_1"
        app:layout_constraintBottom_toBottomOf="@+id/case2"
        app:layout_constraintEnd_toStartOf="@+id/case2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/case2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/suitcase_position_1" />

    <ImageView
        android:id="@+id/case2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/UnopenedBox_2"
        app:layout_constraintEnd_toStartOf="@+id/reward1"
        app:layout_constraintTop_toBottomOf="@+id/caseRemain"
        app:srcCompat="@drawable/suitcase_position_2" />

    <ImageView
        android:id="@+id/case5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/UnopenedBox_5"
        app:layout_constraintBottom_toBottomOf="@+id/case6"
        app:layout_constraintEnd_toStartOf="@+id/case6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/case3"
        app:layout_constraintTop_toTopOf="@+id/case6"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/suitcase_position_5" />

    <ImageView
        android:id="@+id/case3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/UnopenedBox_3"
        app:layout_constraintBottom_toBottomOf="@+id/case4"
        app:layout_constraintEnd_toStartOf="@+id/case4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/case1"
        app:layout_constraintTop_toTopOf="@+id/case4"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/suitcase_position_3" />

    <ImageView
        android:id="@+id/case4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/UnopenedBox_4"
        app:layout_constraintEnd_toStartOf="@+id/reward4"
        app:layout_constraintTop_toBottomOf="@+id/case2"
        app:srcCompat="@drawable/suitcase_position_4" />

    <TextView
        android:id="@+id/caseRemain"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginStart="149dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="205dp"
        android:text="@string/CHooseCase"
        android:textColor="#000000"
        android:textDirection="locale"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/reward1"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/closedReward_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caseRemain"
        app:srcCompat="@drawable/reward_1" />

    <ImageView
        android:id="@+id/reward4"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/closedReward_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reward3"
        app:layout_constraintTop_toBottomOf="@+id/reward3"
        app:srcCompat="@drawable/reward_100" />

    <ImageView
        android:id="@+id/reward6"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/closedReward_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reward5"
        app:layout_constraintTop_toBottomOf="@+id/reward5"
        app:srcCompat="@drawable/reward_1000" />

    <ImageView
        android:id="@+id/reward7"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/closedReward_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reward6"
        app:layout_constraintTop_toBottomOf="@+id/reward6"
        app:srcCompat="@drawable/reward_10000" />

    <ImageView
        android:id="@+id/reward9"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/closedReward_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reward8"
        app:layout_constraintTop_toBottomOf="@+id/reward8"
        app:srcCompat="@drawable/reward_100000" />

    <ImageView
        android:id="@+id/reward5"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/closedReward_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reward4"
        app:srcCompat="@drawable/reward_300" />

    <ImageView
        android:id="@+id/reward3"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/closedReward_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reward2"
        app:layout_constraintTop_toBottomOf="@+id/reward2"
        app:srcCompat="@drawable/reward_50" />

    <ImageView
        android:id="@+id/reward8"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/closedReward_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reward7"
        app:layout_constraintTop_toBottomOf="@+id/reward7"
        app:srcCompat="@drawable/reward_50000" />

    <ImageView
        android:id="@+id/reward10"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/closedReward_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reward9"
        app:layout_constraintTop_toBottomOf="@+id/reward9"
        app:srcCompat="@drawable/reward_500000" />

    <ImageView
        android:id="@+id/reward2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="88dp"
        android:contentDescription="@string/closedReward_2"
        app:layout_constraintEnd_toEndOf="@+id/reward1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/reward1"
        app:layout_constraintTop_toBottomOf="@+id/reward1"
        app:srcCompat="@drawable/reward_10" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="30dp"
        android:text="@string/resetButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/case10"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/deal"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="92dp"
        android:text="@string/Deal"
        app:layout_constraintBottom_toBottomOf="@+id/noDeal"
        app:layout_constraintEnd_toStartOf="@+id/noDeal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/noDeal" />

    <Button
        android:id="@+id/noDeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="73dp"
        android:text="@string/Nodeal"
        android:textColorHighlight="#FFC107"
        android:textColorLink="#AB1212"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reward10" />

</androidx.constraintlayout.widget.ConstraintLayout>